Fixed issue with ui where checkboxes were not aligned correctly

--- a/route21/assets/css/creative.css
+++ b/route21/assets/css/creative.css
@@ -62,7 +62,7 @@ p {
     width: 33%;
     text-align: left;
     text-indent: 10px;
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .bg-primary {
